# postgres-static-analyzer

./: .editorconfig  .gitignore  Cargo.toml  Makefile.toml  README.md  clorinde.toml  deno.json  dev.db.sh  dev.sql  extract_pg_info.ts  gen_pg_info.ts  gen_pg_info.utils.ts  gen_pg_info_decisions.overrides.toml  gen_pg_info_decisions.pre.toml  gen_pg_info_decisions.toml  gen_pg_info_decisions.ts  notes.md  populate_all.db.sh  populate_all.sql  reflect_fns.sql  start.db.sh
catalog_structs/: Cargo.toml  README.md
catalog_structs/src/: aclitem.rs  lib.rs  struct_gen.rs
old/: reflect.rs  reflect_test.rs
old_reflect_queries/: main.sql
reflect/: Cargo.toml  README.md  clorinde.toml  populate_all.sql  reflect_fns.sql
reflect/queries/: manual.sql  query_gen.sql
reflect/queries_crate/: Cargo.toml
reflect/queries_crate/src/: queries.rs  types.rs
reflect/queries_crate/src/queries/: manual.rs  query_gen.rs
reflect/src/: lib.rs  reflect_gen.rs  reflect_test.rs
reflect_queries/: main.sql  reflect.sql  reflect_gen.sql
src/: aclitem.rs  lib.rs  reflect.rs  reflect_gen.rs  reflect_test.rs  system_state.rs
src/snapshots/: postgres_static_analyzer__reflect_test__reflect_pg_state.snap
temp_container_utils/: Cargo.toml
temp_container_utils/src/: lib.rs
