[workspace]
resolver = "3"
members = [
	"temp_container_utils",
	"catalog_structs",
	"reflect",
]

[workspace.dependencies]
futures = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["full", "rt"] }
tokio-postgres = { version = "0.7" }
postgres-types = { version = "*", features = ["derive"] }
rand = "0.9"
rand_distr = "0.5"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "alloc", "clock", "now", "serde"] }
hashbrown = { version = "0.16", features = ["serde"] }
# pg_query = "6.1"
smol_str = { version = "0.3", features = ["serde"] }
itertools = "0.14.0"
anyhow = "1"
insta = { version = "1.46", default-features = false, features = ["colors", "ron", "redactions"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
ordered-float = { version = "5.3.0", default-features = false, features = ["serde"] }

[profile.dev.package.insta]
opt-level = 3
[profile.dev.package.similar]
opt-level = 3
