[package]
name = "postgres-static-analyzer-ddl-catalog-structs"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["alloc", "std", "alloc", "clock", "now", "serde"] }
# thiserror = { workspace = true }
smol_str = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ordered-float = { workspace = true }
postgres-types = { workspace = true, features = ["derive"] }
