[package]
name = "postgres-static-analyzer-ddl-catalog-structs"
description = "DDL-only struct definitions for postgres catalog tables."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hashbrown = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["alloc", "std", "alloc", "clock", "now", "serde"] }
# thiserror = { workspace = true }
smol_str = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ordered-float = { workspace = true }
postgres-types = { workspace = true, features = ["derive"] }
