[package]
name = "postgres-static-analyzer-reflect"
description = "Reflection functions to read from postgres catalog tables and produce DDL-only structs."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
postgres-static-analyzer-reflect-queries = { path = "./queries_crate", version = "=0.1.0" }
postgres-static-analyzer-ddl-catalog-structs = { path = "../catalog_structs", version = "=0.1.0" }
tokio = { workspace = true, features = ["full", "rt"] }
itertools = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
insta = { workspace = true }
ron = { workspace = true }
temp_container_utils = { path = "../temp_container_utils" }
