[package]
name = "temp_container_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "rt"] }
tokio-postgres = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
