[package]
name = "temp_container_utils"
edition = "2024"
publish = false

[package.metadata.workspaces]
independent = true

[dependencies]
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "rt"] }
tokio-postgres = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
